--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"test:e2e": "jest --config ./test/jest-e2e.json"
 	},
 	"dependencies": {
+		"@hapi/joi": "^17.1.1",
 		"@nestjs/common": "^9.0.0",
 		"@nestjs/config": "^2.3.1",
 		"@nestjs/core": "^9.0.0",
@@ -27,6 +28,7 @@
 		"@nestjs/typeorm": "^9.0.1",
 		"class-transformer": "^0.5.1",
 		"class-validator": "^0.14.0",
+		"joi": "^17.9.1",
 		"pg": "^8.10.0",
 		"reflect-metadata": "^0.1.13",
 		"rxjs": "^7.2.0",
@@ -37,6 +39,7 @@
 		"@nestjs/schematics": "^9.0.0",
 		"@nestjs/testing": "^9.0.0",
 		"@types/express": "^4.17.13",
+		"@types/hapi__joi": "^17.1.9",
 		"@types/jest": "29.2.4",
 		"@types/node": "18.11.18",
 		"@types/supertest": "^2.0.11",
@@ -45,7 +48,7 @@
 		"eslint": "^8.0.1",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-prettier": "^4.0.0",
-		"jest": "29.3.1",
+		"jest": "^29.3.1",
 		"prettier": "^2.3.2",
 		"source-map-support": "^0.5.20",
 		"supertest": "^6.1.3",
