add token guard

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=soro
 DB_PASSWORD=pass123
-DB_NAME=todo
+DB_NAME=intership_project
 
 TOKEN=ddfdfqd76q77687f687qdf87q6f7q67f6q8dfq8768f7q
